<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF3F3"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".EditActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtId"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#CA285F" />

    <EditText
        android:id="@+id/edID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#CA285F" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happen"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#CA285F" />

    <EditText
        android:id="@+id/edDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edHappen" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#CA285F" />

    <EditText
        android:id="@+id/edMood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edMood" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#CA285F" />

    <EditText
        android:id="@+id/edDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edDate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/update"
            app:backgroundTint="#00BCD4" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/delete"
            app:backgroundTint="#9C27B0" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:backgroundTint="#979C27B0" />

</LinearLayout>
